# shaderpp

./: CMakeLists.txt  README.md  bool.h  float.h  main.cpp  parser.h
core/: CMakeLists.txt  builder.h  function.h  internal_functions.h  namer.h  parser.h  program.cc  program.h  struct.h  uniform.h  variable.h
core/types/: bool.h  float.h  int.h  vec2.h  vec3.h  vec4.h
include/: builder.h  function.h  internal_functions.h  namer.h  parser.h  struct.h  uniform.h  variable.h
include/codegen/: builder.h
include/types/: bool.h  float.h  int.h  vec2.h  vec3.h  vec4.h
src/: builder.cc  internal_functions.cc  namer.cc  program.cc  struct.cc  variable.cc
src/codegen/: builder.cc
src/types/: bool.cc  float.cc  int.cc  vec2.cc  vec3.cc  vec4.cc
test/: CMakeLists.txt  main.cc  test_phong.cpp  test_shaderpp.cpp  test_utils.h
test/regex/: regex_builder.h
